--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "PCAT photograph application",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon app.js"
   },
   "repository": {
     "type": "git",
@@ -23,6 +24,10 @@
   },
   "homepage": "https://github.com/enesuur/PCAT#readme",
   "devDependencies": {
+    "nodemon": "^2.0.19",
     "prettier": "2.7.1"
+  },
+  "dependencies": {
+    "express": "^4.18.1"
   }
 }
